@@ -158,6 +158,9 @@ Other Changes
 
 * SOLR-4571: SolrZkClient#setData should return Stat object. (Mark Miller)
 
+* SOLR-4596: DistributedQueue should ensure its full path exists in the constructor.
+  (Mark Miller)
+
 ==================  4.2.0 ==================
 
 Versions of Major Components
